[package]
name = "winapi-event"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "minwindef", "winnt", "libloaderapi", "wingdi"] }
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
lazy_static = "1.5.0"